--- a/views/AppLauncher/index.html
+++ b/views/AppLauncher/index.html
@@ -1,15 +1,12 @@
 <html>
 	<body>
-		<div id='container' style="padding: 12; font-family: sans-serif;">
-		</div>
+		<div id="container" style="padding: 12; font-family: sans-serif"></div>
 	</body>
 	<script type="text/javascript">
-
 		window.launcher.handleUpdate((e, data) => {
-
 			//console.log('IN RENDERER', e, data);
 
-			const appNames = data.files.filter(filename => {
+			const appNames = data.files.filter((filename) => {
 				// TODO should be more robust
 				return filename.indexOf('.pwa') !== -1;
 			});
@@ -19,7 +16,6 @@
 			//console.log('got container', container);
 
 			for (let appName of appNames) {
-
 				const appElement = document.createElement('div');
 
 				appElement.textContent = appName;
@@ -29,16 +25,13 @@
 				appElement.style.cursor = 'pointer';
 
 				appElement.addEventListener('click', () => {
-
 					//console.log('clicked', appName);
 
 					window.launcher.openApplication({ name: appName });
-
 				});
 
 				container.appendChild(appElement);
 			}
-
 		});
 
 		setTimeout(() => {
